Missing Value Handling by Column/Row removal, and imputation | Handling Categorical Variables by dropping columns, Ordinal Encoding and One-Hot Encoding

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Datasets
 /Competitions/HousingPrices/Model/submission.csv
 /Competitions/HousingPrices/Data
+/Competitions/Titanic/Model/submission.csv
+/Competitions/Titanic/Data
+/Competitions/Titanic/Model/titanic_OE_submission.csv
