Categorical Variables, Pipeline | 2nd submission for Housing Prices

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Competitions/Titanic/Model/submission.csv
 /Competitions/Titanic/Data
 /Competitions/Titanic/Model/titanic_OE_submission.csv
+/Competitions/HousingPrices/Model/2nd_submission.csv
