Housing Prices, Titanic accuracy Increase | LoanPayBack Competition Entry

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /Competitions/Titanic/Data
 /Competitions/Titanic/Model/titanic_OE_submission.csv
 /Competitions/HousingPrices/Model/2nd_submission.csv
+/Competitions/HousingPrices/Model/3rd_submission.csv
+/Competitions/Titanic/Model/titanic_OE_submission.csv
+/Competitions/Titanic/Model/3rd_submission.csv
+/Competitions/LoanPayback/Data
+/Competitions/LoanPayback/Model/1st_submission.csv
